samples/_failures_safe/1761125192_e3d4d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b32c9f26.c: In function ‘determinant’:
./samples/SAFE/__tmp_b32c9f26.c:145:9: error: expected expression at end of input
  145 |         if (minor == NULL)
      |         ^~
./samples/SAFE/__tmp_b32c9f26.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b32c9f26.c:145:9: error: expected declaration or statement at end of input
